# dd1361

./: README.md
s4/: s4.cabal  sample1.in  sample2.in  sample3.in  sample3.in~  sample4.in  sample5.in  sample8.in  sample8.in~  sample9.in  sample9.in~
s4/.stack-work/install/x86_64-linux/lts-5.14/7.10.3/flag-cache/: mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  parsec-3.1.9-846510776e95ad6c72d82358c09b4bee  s4-0.1.0.0-199d95fb5681d4187991d324acbfa1d0  s4-0.1.0.0-30413d2cc604215ca1d9f34a1f7bdf6a  s4-0.1.0.0-4b0606f4ee5052124386d3ed43c36bd9  text-1.2.2.1-d0adb978563e9f52dc308d1d0db7212c
s4/.stack-work/install/x86_64-linux/lts-5.14/7.10.3/lib/x86_64-linux-ghc-7.10.3/s4-0.1.0.0-5a036ccoHUe9tzKFXgbNQT/: LexerTest.dyn_hi  (+3 more)
s4/.stack-work/install/x86_64-linux/lts-5.14/7.10.3/pkgdb/: package.cache  s4-0.1.0.0-0f02a5a40537e3c135ac350c98b1012f.conf  s4-0.1.0.0-47dc33996431d1f8b5016f53e200c060.conf  s4-0.1.0.0-8546335438636961f34c3dfaf71ad65a.conf  s4-0.1.0.0-9e96fbfd3a6fcf3d4e7dab3e104fc075.conf  s4-0.1.0.0-b23245f3840e8a265b3b05eaee42416f.conf  s4-0.1.0.0-bfda49102908f9bc335e8f3f85129160.conf  s4-0.1.0.0-d0bf0ab8cd473965a2969bacf83e8277.conf
s4/Leonardo/: Evaluator.hi  Evaluator.hs  Evaluator.hs~  Main  Main.hi  Main.hs  Main.hs~  Parser.hi  Parser.hs  compile  compile~
s4/Leonardo/instructions/: sample1.in  sample10.in  sample11.in  sample3.in  sample5.in  sample6.in  sample7.in  sample8.in
s4/app/: Main.hs
s4/src/: .#S4.hs  Lexer.hs  Lexer.hs~  Lexer1.hs~  LexerTest.hs  LexerTest.hs~  Parse.hs  S4.hs  S4.hs~  sample1  sample1.in  sample1~  sample6.in  test.py  test.py~
(+111 files in other folders)
