name:                s4
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/s4#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
--extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parse, LexerTest
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010

executable s4-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , s4
                     , parsec
                     , containers
                     , mtl

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/s4
